fix font size on mobile phones

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1240,7 +1240,11 @@ blockquote {
        position: inherit;
        width: auto;
     }
-	
+    
+    .read-next {
+        font-size: 20px;
+    }
+    
     .post-quote {
        width: 90%;
     }
